<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Oppia</string>
  <string name="home_activity_name">Home</string>
  <string name="continue_playing_section_header">Continue with your Lesson</string>
  <string name="more_topics_button_text">More</string>
  <string name="all_topics_section_header">All Topics</string>
  <string name="welcome_text">Welcome to Oppia!</string>
  <string name="welcome_back_text">Welcome back to Oppia!</string>
  <string name="loading_topics_list_text">Loading topics list…</string>
  <string name="error_loading_topics_list_text">Error loading topics list</string>
  <string name="empty_topics_list_text">There are no topics to show</string>

  <plurals name="lesson_count">
    <item quantity="one">
      1 Lesson
    </item>
    <item quantity="other">
      %d Lessons
    </item>
  </plurals>

  <string name="audio_pause_play_description">Audio play/pause button</string>
  <string name="audio_language_select_dialog_okay_button">OK</string>
  <string name="audio_language_select_dialog_cancel_button">CANCEL</string>
  <string name="audio_language_select_dialog_title">Audio Language</string>
  <string name="cellular_data_alert_dialog_okay_button">OK</string>
  <string name="cellular_data_alert_dialog_cancel_button">CANCEL</string>
  <string name="cellular_data_alert_dialog_title">Currently on Cellular Data</string>
  <string name="cellular_data_alert_dialog_description">Streaming audio may use a lot of cellular data.</string>
  <string name="cellular_data_alert_dialog_checkbox">Don\'t show this message again</string>
  <string name="topic_train_master_these_skills">Master These Skills</string>
  <string name="topic_train_skills_description">Select or unselect skills that you want to practice</string>
  <string name="topic_train_start">Start</string>
</resources>
