<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>
    <variable
      name="viewModel"
      type="org.oppia.app.home.HomeViewModel"/>
  </data>
  <!-- https://medium.com/@mujtahidah/load-more-recyclerview-inside-nested-scroll-view-and-coordinator-layout-4f179dc01fd -->
  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white">
      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_scrollFlags="scroll">
        <TextView
          android:id="@+id/welcome_text_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{viewModel.userAppHistoryLiveData.getAlreadyOpenedApp() ? @string/welcome_back_text : @string/welcome_text}"
          android:textSize="24sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
        <TextView
          android:id="@+id/continue_playing_header"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="40dp"
          android:fontFamily="sans-serif-medium"
          android:text="@string/continue_playing_section_header"
          android:textSize="18sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/welcome_text_view"/>
        <TextView
          android:id="@+id/more_topics_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:clickable="true"
          android:focusable="true"
          android:fontFamily="sans-serif-medium"
          android:text="@string/more_topics_button_text"
          android:textAllCaps="true"
          android:textColor="@color/colorPrimary"
          android:textSize="14sp"
          app:layout_constraintBottom_toBottomOf="@+id/continue_playing_header"
          app:layout_constraintEnd_toEndOf="parent"/>
        <FrameLayout
          android:id="@+id/continue_playing_topic_container_placeholder"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/continue_playing_header"/>
        <TextView
          android:id="@+id/all_topics_header"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="32dp"
          android:fontFamily="sans-serif-medium"
          android:text="@string/all_topics_section_header"
          android:textSize="18sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/continue_playing_topic_container_placeholder"/>
        <FrameLayout
          android:id="@+id/all_topics_container_placeholder"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/all_topics_header"/>
      </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>
  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
